--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -34,8 +34,8 @@ dark: true
         Schedule of workshops is here! Please see the document below for the up-to-date schedule.
       	<br />
 	
-	<body style="margin:0px;padding:0px;overflow:hidden">
-	    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+	<body style="margin:0px;padding:0px;overflow:scroll">
+	    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
 	</body>
       
 </section>
