--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -102,50 +102,60 @@ dark: true
 </section>
 
 
-<!-- <section id="teams" class="primary-section">
+ <section id="teams" class="primary-section">
 <div class="container">
 	<br />
 	<br />
 	<br />
 	<br />
-        <h1>2018 Teams</h1>
+        <h1>2019 Teams</h1>
         <hr />
         <br />
 
-	  <table class="tableizer-table">
-	<thead><tr class="tableizer-firstrow"><th>Team</th><th>Team Number</th><th>Location</th></tr></thead><tbody>
-	 <tr><td>Penn Robotics</td><td>135</td><td>Mishawaka, IN</td></tr>
-	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
-	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
-	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette, IN</td></tr>
-	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel, IN</td></tr>
-	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
-	 <tr><td>Chicago Knights</td><td>1739</td><td>Chicago, IL</td></tr>
-	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>West Lafayette, IN</td></tr>
-	 <tr><td>Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
-	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN </td></tr>
-	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
-	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
-	 <tr><td>PiBotics</td><td>3814</td><td>Florence, KY</td></tr>
-	 <tr><td>South Bend WildBots</td><td>3865</td><td>South Bend, Ind </td></tr>
-	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
-	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
-	 <tr><td>ScotBot</td><td>4284</td><td>Cincinnati, OH</td></tr>
-	 <tr><td>Tribe Tech Robotics</td><td>4485</td><td>Danville, IN</td></tr>
-	 <tr><td>GalacTech </td><td>4926</td><td>Columbus, IN</td></tr>
-	 <tr><td>Iron Giants </td><td>5069</td><td>Edwardsburg, MI</td></tr>
-	 <tr><td>Career Academy South Bend</td><td>5484</td><td>South Bend, IN</td></tr>
-	 <tr><td>WolfByte</td><td>5822</td><td>Chicago, IL</td></tr>
-	 <tr><td>Wired Warriors</td><td>6451</td><td>Whiteland, IN</td></tr>
-	 <tr><td>VOLTEC Robotics</td><td>6647</td><td>Monterrey, NL</td></tr>
-	 <tr><td>Trailblazer Robotics</td><td>6721</td><td>Indianapolis, IN</td></tr>
-	 <tr><td>SHAM-ROCK-BOTICS</td><td>6956</td><td>Westfield, IN</td></tr>
-	 <tr><td>NOS</td><td>7432</td><td>Loretto,MN</td></tr>
+	 <style type="text/css">
+	table.tableizer-table {
+		font-size: 12px;
+		border: 1px solid #CCC; 
+		font-family: Arial, Helvetica, sans-serif;
+	} 
+	.tableizer-table td {
+		padding: 4px;
+		margin: 3px;
+		border: 1px solid #CCC;
+	}
+	.tableizer-table th {
+		background-color: #104E8B; 
+		color: #FFF;
+		font-weight: bold;
+	}
+	</style>
+	<table class="tableizer-table">
+	<thead><tr class="tableizer-firstrow"><th>Slicer Tech</th><th>9102</th></tr></thead><tbody>
+	 <tr><td>The RoboBlazers</td><td>7617</td></tr>
+	 <tr><td>Cyber Blue</td><td>234</td></tr>
+	 <tr><td>Lindblom Electric Eagles</td><td>1781</td></tr>
+	 <tr><td>PiBotics</td><td>3814</td></tr>
+	 <tr><td>Ctrl-Z</td><td>4096</td></tr>
+	 <tr><td>Red Pride Robotics</td><td>3487</td></tr>
+	 <tr><td>Thunderbots</td><td>7657</td></tr>
+	 <tr><td>Career Academy Robotics</td><td>5484</td></tr>
+	 <tr><td>ElkLogics</td><td>2867</td></tr>
+	 <tr><td>GalacTech</td><td>4926</td></tr>
+	 <tr><td>The Quadrangles</td><td>3494</td></tr>
+	 <tr><td>TechHOUNDS</td><td>868</td></tr>
+	 <tr><td>Pike RoboDevils</td><td>1018</td></tr>
+	 <tr><td>Precision Guessworks</td><td>1646</td></tr>
+	 <tr><td>Westside Boiler Invasion</td><td>461</td></tr>
+	 <tr><td>PantherTech</td><td>292</td></tr>
+	 <tr><td>Gear It Forward</td><td>2338</td></tr>
+	 <tr><td>TribeTech</td><td>4485</td></tr>
+	 <tr><td>Hawks On The Horizon</td><td>5125</td></tr>
+	 <tr><td>SHAM-ROCK-BOTICS ?</td><td>6956</td></tr>
 	</tbody></table>
 
 
     </div>
-</section> -->
+</section> 
 
 
 
