--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -128,9 +128,27 @@ dark: true
 		color: #FFF;
 		font-weight: bold;
 	}
+	<style type="text/css">
+	table.tableizer-table {
+		font-size: 12px;
+		border: 1px solid #CCC; 
+		font-family: Arial, Helvetica, sans-serif;
+	} 
+	.tableizer-table td {
+		padding: 4px;
+		margin: 3px;
+		border: 1px solid #CCC;
+	}
+	.tableizer-table th {
+		background-color: #104E8B; 
+		color: #FFF;
+		font-weight: bold;
+	}
 	</style>
+	
 	<table class="tableizer-table">
-	<thead><tr class="tableizer-firstrow"><th>Slicer Tech</th><th>9102</th></tr></thead><tbody>
+	<thead><tr class="tableizer-firstrow"><th>Team Name:</th><th>Team #:</th></tr></thead><tbody>
+	 <tr><td>Slicer Tech</td><td>9102</td></tr>
 	 <tr><td>The RoboBlazers</td><td>7617</td></tr>
 	 <tr><td>Cyber Blue</td><td>234</td></tr>
 	 <tr><td>Lindblom Electric Eagles</td><td>1781</td></tr>
