--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -28,23 +28,24 @@ dark: true
 
 <section id="schedule" class="primary-section">
 <div class="container">
-        <h1>Schedule Coming Soon!</h1>
+        <h1>2019 Schedule</h1> 
         <hr />
         <br />
-        <!-- <div class="center">
-            <hr class="medium-hr thin" />
+         <div class="center">
+            <!--<hr class="medium-hr thin" /> -->
         <br />
-
-        <b>Friday October 26th</b>
+        <b>Friday November 15th</b>
         <br />
-        3:00-8:00pm Venue open for robot load in and practice rounds
+        3:00-8:00pm Venue open for robot load in and practice rounds (field permitting)
         <br />
         6:00pm-10:00pm Team Social
         <br />
 		<br />
-        <b>Saturday, October 27th</b>
+        <b>Saturday, November 16th</b>
         <br />
         7:15am Doors Open
+        <br />
+        7:45-8:00am	Drivers' Meeting
         <br />
         8:00-8:30am Opening Ceremonies
         <br />
@@ -60,7 +61,7 @@ dark: true
         3:00-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
-              <h2>Team Social</h2>
+        <!--      <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
         The team social will take place on Friday, October 26th from 6:00-10:00pm. The social will cost $10* per person attending and will include Coldstone Ice Cream and Pizza.
@@ -96,7 +97,6 @@ dark: true
 		-Lego Free Build
 		<br />
 		-DJ
-
         </div> -->
     </div>
 </section>
