Kyle learn to format dates and also when 12am is

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -36,7 +36,7 @@ dark: true
         <br />
         <b>Friday November 15th</b>
         <br />
-        5:00-8:00pm Venue open for robot load in and practice rounds (field permitting)
+        5:00pm-8:00pm Venue open for robot load in and practice rounds (field permitting)
         <br />
         6:00pm-10:00pm Team Social
         <br />
@@ -45,20 +45,20 @@ dark: true
         <br />
         7:15am Doors Open
         <br />
-        7:45-8:00am	Drivers' Meeting
+        7:45am-8:00am	Drivers' Meeting
         <br />
-        8:00-8:30am Opening Ceremonies
+        8:00am-8:30am Opening Ceremonies
         <br />
-        8:30-12:00am Qualification Matches
+        8:30am-12:00pm Qualification Matches
         <br />
         <br />
-        12:00am-1:00pm Lunch
+        12:00pm-1:00pm Lunch
         <br />
-        1:00-2:30pm Qualification Matches
+        1:00pm-2:30pm Qualification Matches
         <br />
-        2:30-3:00pm Alliance Selection
+        2:30pm-3:00pm Alliance Selection
         <br />
-        3:00-5:30pm Elimination Matches
+        3:00pm-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
         <!--      <h2>Team Social</h2>
