Update Team List

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -147,29 +147,41 @@ dark: true
 	</style>
 
 	<table class="tableizer-table">
-	<thead><tr class="tableizer-firstrow"><th>Team Name:</th><th>Team #:</th></tr></thead><tbody>
-	 <tr><td>Slicer Tech</td><td>9102</td></tr>
-	 <tr><td>The RoboBlazers</td><td>7617</td></tr>
-	 <tr><td>Cyber Blue</td><td>234</td></tr>
-	 <tr><td>Lindblom Electric Eagles</td><td>1781</td></tr>
-	 <tr><td>PiBotics</td><td>3814</td></tr>
-	 <tr><td>Ctrl-Z</td><td>4096</td></tr>
-	 <tr><td>Red Pride Robotics</td><td>3487</td></tr>
-	 <tr><td>Thunderbots</td><td>7657</td></tr>
-	 <tr><td>Career Academy Robotics</td><td>5484</td></tr>
-	 <tr><td>ElkLogics</td><td>2867</td></tr>
-	 <tr><td>GalacTech</td><td>4926</td></tr>
-	 <tr><td>The Quadrangles</td><td>3494</td></tr>
-	 <tr><td>TechHOUNDS</td><td>868</td></tr>
-	 <tr><td>Pike RoboDevils</td><td>1018</td></tr>
-	 <tr><td>Precision Guessworks</td><td>1646</td></tr>
-	 <tr><td>Westside Boiler Invasion</td><td>461</td></tr>
-	 <tr><td>PantherTech</td><td>292</td></tr>
-	 <tr><td>Gear It Forward</td><td>2338</td></tr>
-	 <tr><td>TribeTech</td><td>4485</td></tr>
-	 <tr><td>Hawks On The Horizon</td><td>5125</td></tr>
-	 <tr><td>SHAM-ROCK-BOTICS ?</td><td>6956</td></tr>
+	<thead><tr class="tableizer-firstrow"><th>Team Name:</th><th>Team #:</th><th>Location of Team (City, State)</th></tr></thead><tbody>
+	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
+	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
+	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette</td></tr>
+	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel Indiana</td></tr>
+	 <tr><td>Pike RoboDevils</td><td>1018</td><td>Indianapolis, IN</td></tr>
+	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
+	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>W Lafayette, IN</td></tr>
+	 <tr><td>Lindblom Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
+	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN</td></tr>
+	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
+	 <tr><td>ElkLogics</td><td>2867</td><td>Elkhart, IN</td></tr>
+	 <tr><td>MECHAlosaurs</td><td>3180</td><td>Trafalgar, Indiana</td></tr>
+	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
+	 <tr><td>The Quadrangles</td><td>3494</td><td>Bloomington, IN</td></tr>
+	 <tr><td>PiBotics</td><td>3814</td><td>Erlanger, KY</td></tr>
+	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
+	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
+	 <tr><td>Maverick Boiler Robotics</td><td>4272</td><td>Lafayette, IN</td></tr>
+	 <tr><td>TribeTech</td><td>4485</td><td>Danville, IN</td></tr>
+	 <tr><td>GalacTech</td><td>4926</td><td>Columbus, Indiana</td></tr>
+	 <tr><td>Tiger Dynasty</td><td>5010</td><td>Fishers, IN</td></tr>
+	 <tr><td>Hawks On The Horizon</td><td>5125</td><td>Chicago,ILLINOIS</td></tr>
+	 <tr><td>Area 5188: Classified Robotics</td><td>5188</td><td>Terre Haute, IN</td></tr>
+	 <tr><td>Career Academy Robotics</td><td>5484</td><td>South Bend</td></tr>
+	 <tr><td>Wolfbyte</td><td>5822</td><td>Chicago, IL</td></tr>
+	 <tr><td>SHAM-ROCK-BOTICS ?</td><td>6956</td><td>Westfield, IN</td></tr>
+	 <tr><td>Fearsome Gears</td><td>7198</td><td>Monticello, IN</td></tr>
+	 <tr><td>suPURDUEper Robotics</td><td>7457</td><td>Indianapolis</td></tr>
+	 <tr><td>The RoboBlazers</td><td>7617</td><td>Carmel, IN</td></tr>
+	 <tr><td>Thunderbots</td><td>7657</td><td>Evansville, IN</td></tr>
+	 <tr><td>Hatchet Robotics</td><td>8116</td><td>washington, IN</td></tr>
+	 <tr><td>Slicer Tech</td><td>9102</td><td>La Porte, Indiana</td></tr>
 	</tbody></table>
+
 
 
     </div>
