Updated page with relevant info for FLL qualifier 2019

--- a/fll-regional.html
+++ b/fll-regional.html
@@ -5,7 +5,7 @@ event-date: "November 23rd"
 event-year: "2019"
 location-ntrl: "McCutcheon High School"
 location: "4951 US-231, Lafayette, IN 47909"
-image: "fll-2015.jpg"
+image: "fll-2019-lg.jpg"
 contact: "president@purduefirst.org"
 dark: true
 ---
@@ -94,6 +94,29 @@ dark: true
 	</div>
 </section>
 -->
+
+<section id="details" class="primary-section">
+	<div class="container">
+		<h1>Info and Details</h1>
+		<hr />
+		<br />
+		<body style="margin:0px;padding:0px;overflow:scroll">
+			<iframe src="https://docs.google.com/document/d/e/2PACX-1vQuKITJrLfSF2UD3zztxs4MYwIIX6RknBQcZiVH6xjByd1RiRobftAfYTbQ4eHme1gJEGPz-KRmOxgH/pub?embedded=true" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
+		</body>
+	</div>
+</section>
+
+<section id="schedule" class="primary-section">
+	<div class="container">
+		<h1>Match Schedule</h1>
+		<hr />
+		<br />
+		<body style="margin:0px;padding:0px;overflow:scroll">
+			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSkvG_acqtuZvVMPl5JhY77Qeb6vw1bI5IrLm97F_pWrkgXXJ_1m8U3I2P-qCu9f3CcxfrZg61vDojQ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
+		</body>
+	</div>
+</section>
+
 <section id="location" class="primary-section">
 	<div class="container">
 		<h1>Location</h1>
