Updated homepage image and fixed date for FTC LtS

--- a/ftc-qualifier.html
+++ b/ftc-qualifier.html
@@ -1,9 +1,9 @@
 ---
 layout: event-image
-image: ftc-event.jpg
+image: ftc-alt-lg.jpg
 title: "Light the Spark FTC Qualifier"
-event-date: "February 10"
-event-year: "2018"
+event-date: "February 15"
+event-year: "2019"
 location-ntrl: "Central Catholic Jr/Sr High School"
 location: "2410 S 9th St, Lafayette, IN 47909"
 contact: "president@purduefirst.org"
