--- a/index.html
+++ b/index.html
@@ -3,22 +3,12 @@ layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
 mission-summary: "Contact us below!"
-image: "crossroads-2014.jpg"
+image: "PFP-teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
 ---
 
-<section id="alum" class="primary-section">
-	<div class="container">
-		<h1>Are you a Purdue FIRST Programs alumni?</h1>
-		<hr class="medium-hr">
-		<br>
-		<br>
-		<br>
-		<p>If you are a Purdue FIRST Programs Alumni, and would like to give us your information so that we can inform you of what we are currently doing, please fill out this form!</p>
-		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfL_I3cq_bKNPhdkBA0xUFzWBmBOFsSw_aeMWiLO_bjI08DAA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-	</div>
-</section>
+
 <!--
 	<section id="alum" class="primary-section">
 		<div class="container">
@@ -52,5 +42,16 @@ dark: true
 		<br>
 		<br>
 		<p>Our FIRST Leadership class promotes and develops leadership skills for college students in an engaging, hands-on way. We have various team building activities that highlight the challenges of working in a group but also the benefits of having an effective leader. We have professors from departments across Purdue come to class and speak on what it means to be a leader to them. The professors share their wealth of knowledge and encourage us to continue to mentor and engage students in STEM.</p>
+	</div>
+</section>
+<section id="alum" class="primary-section">
+	<div class="container">
+		<h1>Are you a Purdue FIRST Programs alumni?</h1>
+		<hr class="medium-hr">
+		<br>
+		<br>
+		<br>
+		<p>If you are a Purdue FIRST Programs Alumni, and would like to give us your information so that we can inform you of what we are currently doing, please fill out this form!</p>
+		<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfL_I3cq_bKNPhdkBA0xUFzWBmBOFsSw_aeMWiLO_bjI08DAA/viewform?embedded=true" width="760" height="500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 </section>
