Images case sensitive on remote

--- a/ftc-qualifier.html
+++ b/ftc-qualifier.html
@@ -1,6 +1,6 @@
 ---
 layout: event-image
-image: ftc-alt-lg.jpg
+image: FTC-Alt-lg.jpg
 title: "Light the Spark FTC Qualifier"
 event-date: "February 15"
 event-year: "2019"
