--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
 mission-summary: "Contact us below!"
-image: "PFP-teams.jpg"
+image: "PFP-Teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
 ---
