--- a/fll-regional.html
+++ b/fll-regional.html
@@ -112,7 +112,29 @@ dark: true
 		<hr />
 		<br />
 		<body style="margin:0px;padding:0px;overflow:scroll">
-			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSkvG_acqtuZvVMPl5JhY77Qeb6vw1bI5IrLm97F_pWrkgXXJ_1m8U3I2P-qCu9f3CcxfrZg61vDojQ/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
+			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGn7oRAhEIeBPcQnjmrSh9McToN3Ari9BWEeXQN5Et33SvHqCN6wflpY4sFE9HUXPp81feHlV_ZeQz/pubhtml?gid=2018394652&amp;single=true&amp;widget=true&amp;headers=false" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
+		</body>
+	</div>
+</section>
+
+<section id="prac-schedule" class="primary-section">
+	<div class="container">
+		<h1>Practice Match Schedule</h1>
+		<hr />
+		<br />
+		<body style="margin:0px;padding:0px;overflow:scroll">
+			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGn7oRAhEIeBPcQnjmrSh9McToN3Ari9BWEeXQN5Et33SvHqCN6wflpY4sFE9HUXPp81feHlV_ZeQz/pubhtml?gid=1454941753&amp;single=true&amp;widget=true&amp;headers=false" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
+		</body>
+	</div>
+</section>
+
+<section id="prac-schedule" class="primary-section">
+	<div class="container">
+		<h1>Judging Schedule</h1>
+		<hr />
+		<br />
+		<body style="margin:0px;padding:0px;overflow:scroll">
+			<iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSGn7oRAhEIeBPcQnjmrSh9McToN3Ari9BWEeXQN5Et33SvHqCN6wflpY4sFE9HUXPp81feHlV_ZeQz/pubhtml?gid=1808259518&amp;single=true&amp;widget=true&amp;headers=false" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
 		</body>
 	</div>
 </section>
