--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
-mission-summary: "Contact us below!"
+mission-summary: "See the callout information below!"
 image: "PFP-Teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
@@ -22,6 +22,14 @@ dark: true
 		</div>
 	</section>
 -->
+
+
+<section id="callout">
+	<div class="container" style="text-align: center;">
+		<img src="img/2020Callout.gif" style="float: none; margin-left: auto; margin-right: auto; width: 75%; height: auto;"/>
+	</div>
+ </section>
+
 <section id="about" class="primary-section">
 	<div class="container">
 		<h1>About</h1>
