--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -1,11 +1,11 @@
 ---
 layout: event-image
-image: state-2016.jpg
+image: B3-2018.jpg
 title: "Boiler Bot Battle"
 event-date: "November 15th-16th"
 event-year: "2019"
 location: "812 3rd Street, West Lafayette, IN 47907"
-link: https://forms.gle/NaFjWxBYwgHV3fkz7
+<!-- link: https://forms.gle/NaFjWxBYwgHV3fkz7 -->
 location-ntrl: "Purdue University Armory"
 contact: "boilerbotbattle@gmail.com"
 dark: true
@@ -14,10 +14,12 @@ dark: true
     <div class="container">
         <h1>About</h1>
         <hr />
-        <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
+        <div class="container">
+          <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
+        </div>
         <br />
         <br />
-        Be a part of the fourth annual Boiler Bot Battle, hosted at Purdue University by Purdue FIRST Programs. Join us at the Purdue Armory on November 15th and 16th for robots, campus tours, social events, and much more. Check back to this page for frequent updates, and we hope to see you in November!
+        Thank you to the students, mentors, and volunteers for all of your participation in making BoilerBotBattle 2019 an awesome event. Check out our recap, results, and awards. Stay tuned here for any news about upcoming FRC competitions at Purdue!
 
     <br>
     <hr class="medium-hr thin" />
@@ -26,13 +28,103 @@ dark: true
     </div>
 </section>
 
-<section id="schedule" class="primary-section">
+<section id="teams" class="primary-section">
+<div class="container">
+
+        <h1>2019 Teams</h1>
+        <hr />
+        <br />
+<div class="channel-row">
+  <div class="channel-col">
+  	<table class="tableizer-table">
+  	<thead><tr class="tableizer-firstrow"><th>Team Name</th><th>Team #</th><th>Location of Team</th></tr></thead><tbody>
+  	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
+  	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
+  	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette, IN</td></tr>
+  	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel, IN</td></tr>
+  	 <tr><td>Pike RoboDevils</td><td>1018</td><td>Indianapolis, IN</td></tr>
+  	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
+  	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>West Lafayette, IN</td></tr>
+  	 <tr><td>Lindblom Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
+  	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN</td></tr>
+  	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
+  	 <tr><td>ElkLogics</td><td>2867</td><td>Elkhart, IN</td></tr>
+  	 <tr><td>MECHAlosaurs</td><td>3180</td><td>Trafalgar, IN</td></tr>
+  	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
+  	 <tr><td>The Quadrangles</td><td>3494</td><td>Bloomington, IN</td></tr>
+  	 <tr><td>PiBotics</td><td>3814</td><td>Erlanger, KY</td></tr>
+  	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
+  	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
+  	 <tr><td>Maverick Boiler Robotics</td><td>4272</td><td>Lafayette, IN</td></tr>
+  	 <tr><td>TribeTech</td><td>4485</td><td>Danville, IN</td></tr>
+  	 <tr><td>GalacTech</td><td>4926</td><td>Columbus, IN</td></tr>
+  	 <tr><td>Tiger Dynasty</td><td>5010</td><td>Fishers, IN</td></tr>
+  	 <tr><td>Hawks On The Horizon</td><td>5125</td><td>Chicago, IL</td></tr>
+  	 <tr><td>Area 5188: Classified Robotics</td><td>5188</td><td>Terre Haute, IN</td></tr>
+  	 <tr><td>Career Academy Robotics</td><td>5484</td><td>South Bend</td></tr>
+  	 <tr><td>Wolfbyte</td><td>5822</td><td>Chicago, IL</td></tr>
+  	 <tr><td>SHAM-ROCK-BOTICS</td><td>6956</td><td>Westfield, IN</td></tr>
+  	 <tr><td>Fearsome Gears</td><td>7198</td><td>Monticello, IN</td></tr>
+  	 <tr><td>suPURDUEper Robotics</td><td>7457</td><td>Indianapolis, IN</td></tr>
+  	 <tr><td>The RoboBlazers</td><td>7617</td><td>Carmel, IN</td></tr>
+  	 <tr><td>Thunderbots</td><td>7657</td><td>Evansville, IN</td></tr>
+  	 <tr><td>Hatchet Robotics</td><td>8116</td><td>Washington, IN</td></tr>
+  	 <tr><td>Slicer Tech</td><td>9102</td><td>La Porte, IN</td></tr>
+  	</tbody></table>
+  </div>
+  <div class="channel-col">
+    <img src="img/B32019-Results.png" class="spons-image" style="max-height: 30%; margin-bottom: 0px;"/>
+    <a href="https://www.thebluealliance.com/event/2019inbbb#results">More results at thebluealliance.com</a>
+  </div>
+</div>
+
+
+    </div>
+</section>
+
+<section id="Sponsors" class="primary-section">
+  <div class="container">
+    <h1>Event Sponsors</h1>
+    <hr />
+    <br />A huge thank you to our 2019 Event Sponsors for helping make B3 possible.
+    <br />
+    <br />
+    <div class="container">
+      <img src="img/JohnDeere.png" class="spons-image" style="margin-bottom: 5px; max-height: 10em;"/>
+      <br />
+      <img src="img/AndyMark.png" class="spons-image" style="margin-bottom: 5px; max-height: 15em;"/>
+      <br />
+      <img src="img/Purdue-Provost.png" class="spons-image" style="margin-bottom: 5px;"/>
+      <br />
+      <br />
+      <br />
+
+      <img src="img/Purdue-Polytech.png" class="spons-image" style="margin-bottom: 5px;"/>
+      <br />
+      <br />
+      <br />
+
+      <img src="img/Purdue-ME.png" class="spons-image" style="margin-bottom: 5px;"/>
+      <br />
+      <br />
+      <br />
+
+      <img src="img/Purdue-ECE.png" class="spons-image" style="margin-bottom: 5px;"/>
+      <br />
+      <br />
+      <br />
+
+
+    </div>
+  </div>
+</section>
+
+<!--<section id="schedule" class="primary-section">
 <div class="container">
         <h1>2019 Schedule</h1>
         <hr />
         <br />
          <div class="center">
-            <!--<hr class="medium-hr thin" /> -->
         <br />
         <b>Friday November 15th</b>
         <br />
@@ -61,7 +153,7 @@ dark: true
         3:00pm-5:30pm Elimination Matches
         <br />
         6:00pm-6:45pm Awards and Closing Ceremonies
-        <!--      <h2>Team Social</h2>
+            <h2>Team Social</h2>
         <hr class="medium-hr thin" />
         <br />
         The team social will take place on Friday, October 26th from 6:00-10:00pm. The social will cost $10* per person attending and will include Coldstone Ice Cream and Pizza.
@@ -97,121 +189,113 @@ dark: true
 		-Lego Free Build
 		<br />
 		-DJ
-        </div> -->
-    </div>
-</section>
-
-
- <section id="teams" class="primary-section">
-<div class="container">
-	<br />
-	<br />
-	<br />
-	<br />
-        <h1>2019 Teams</h1>
-        <hr />
-        <br />
-
-	 <style type="text/css">
-	table.tableizer-table {
-		font-size: 12px;
-		border: 1px solid #CCC;
-		font-family: Arial, Helvetica, sans-serif;
-	}
-	.tableizer-table td {
-		padding: 4px;
-		margin: 3px;
-		border: 1px solid #CCC;
-	}
-	.tableizer-table th {
-		background-color: #104E8B;
-		color: #FFF;
-		font-weight: bold;
-	}
-	<style type="text/css">
-	table.tableizer-table {
-		font-size: 12px;
-		border: 1px solid #CCC;
-		font-family: Arial, Helvetica, sans-serif;
-	}
-	.tableizer-table td {
-		padding: 4px;
-		margin: 3px;
-		border: 1px solid #CCC;
-	}
-	.tableizer-table th {
-		background-color: #104E8B;
-		color: #FFF;
-		font-weight: bold;
-	}
-	</style>
-
-	<table class="tableizer-table">
-	<thead><tr class="tableizer-firstrow"><th>Team Name:</th><th>Team #:</th><th>Location of Team (City, State)</th></tr></thead><tbody>
-	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
-	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
-	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette</td></tr>
-	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel Indiana</td></tr>
-	 <tr><td>Pike RoboDevils</td><td>1018</td><td>Indianapolis, IN</td></tr>
-	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
-	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>W Lafayette, IN</td></tr>
-	 <tr><td>Lindblom Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
-	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN</td></tr>
-	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
-	 <tr><td>ElkLogics</td><td>2867</td><td>Elkhart, IN</td></tr>
-	 <tr><td>MECHAlosaurs</td><td>3180</td><td>Trafalgar, Indiana</td></tr>
-	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
-	 <tr><td>The Quadrangles</td><td>3494</td><td>Bloomington, IN</td></tr>
-	 <tr><td>PiBotics</td><td>3814</td><td>Erlanger, KY</td></tr>
-	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
-	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
-	 <tr><td>Maverick Boiler Robotics</td><td>4272</td><td>Lafayette, IN</td></tr>
-	 <tr><td>TribeTech</td><td>4485</td><td>Danville, IN</td></tr>
-	 <tr><td>GalacTech</td><td>4926</td><td>Columbus, Indiana</td></tr>
-	 <tr><td>Tiger Dynasty</td><td>5010</td><td>Fishers, IN</td></tr>
-	 <tr><td>Hawks On The Horizon</td><td>5125</td><td>Chicago,ILLINOIS</td></tr>
-	 <tr><td>Area 5188: Classified Robotics</td><td>5188</td><td>Terre Haute, IN</td></tr>
-	 <tr><td>Career Academy Robotics</td><td>5484</td><td>South Bend</td></tr>
-	 <tr><td>Wolfbyte</td><td>5822</td><td>Chicago, IL</td></tr>
-	 <tr><td>SHAM-ROCK-BOTICS ?</td><td>6956</td><td>Westfield, IN</td></tr>
-	 <tr><td>Fearsome Gears</td><td>7198</td><td>Monticello, IN</td></tr>
-	 <tr><td>suPURDUEper Robotics</td><td>7457</td><td>Indianapolis</td></tr>
-	 <tr><td>The RoboBlazers</td><td>7617</td><td>Carmel, IN</td></tr>
-	 <tr><td>Thunderbots</td><td>7657</td><td>Evansville, IN</td></tr>
-	 <tr><td>Hatchet Robotics</td><td>8116</td><td>washington, IN</td></tr>
-	 <tr><td>Slicer Tech</td><td>9102</td><td>La Porte, Indiana</td></tr>
-	</tbody></table>
-
-
-
-    </div>
-</section>
-
-
-
-
-
-<section id="location" class="primary-section">
-    <div class="container">
-        <h1>Livestream</h1>
-        <hr />
-        <br />
-        <div class="center">
-		<iframe src="https://player.twitch.tv/?channel=indianafirstlive" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe><a href="https://www.twitch.tv/indianafirstlive?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from indianafirstlive on www.twitch.tv</a>    </div>
-
-</section>
-
-
-
-
-
-<section id="location" class="primary-section">
-    <div class="container">
-        <h1>Location</h1>
-        <hr />
-        <br />
-        <div class="center">
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002.590734024036!2d-86.91866526050549!3d40.428480359435476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C%20812%203rd%20Street%2C%20West%20Lafayette%2C%20IN%2047907!5e0!3m2!1sen!2sus!4v1569080406406!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
+    </div>
+</section> -->
 
+<section id="location" class="primary-section">
+  <div class="container">
+    <h1>Livestream</h1>
+    <hr />
+    <br />
+    <div class="center">
+      <iframe src="https://player.twitch.tv/?channel=indianafirstlive" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
+      <a href="https://www.twitch.tv/indianafirstlive?tt_content=text_link&tt_medium=live_embed" style="padding:2px 0px 4px; display:block; width:345px; font-weight:normal; font-size:10px; text-decoration:underline;">Watch live video from indianafirstlive on www.twitch.tv</a>
+    </div>
+    <h3>Match Videos</h3>
+    <hr class="medium-hr thin" />
+    <br />
+    <a href="https://www.youtube.com/user/IndianaRobotics/">Checkout the matches of the 2019 Boiler Bot Battle here!</a>
+  </div>
 </section>
+
+
+
+
+
+<section id="location" class="primary-section">
+<div class="container">
+  <h1>Location</h1>
+  <hr />
+  <br />
+  <div class="center">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002.590734024036!2d-86.91866526050549!3d40.428480359435476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C%20812%203rd%20Street%2C%20West%20Lafayette%2C%20IN%2047907!5e0!3m2!1sen!2sus!4v1569080406406!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+  </div>
+</div>
+</section>
+
+<style type="text/css">
+  .channel-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 4px;
+  }
+  .channel-col {
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 4px;
+  }
+
+  .spons-col img {
+  margin-top: 8px;
+  vertical-align: middle;
+  max-width: 100%;
+  }
+
+  .spons-table {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .spons-image {
+    max-height: 6em;
+    display: block;
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    border-right:0px;
+    float: none;
+  }
+  table.tableizer-table {
+    font-size: 12px;
+    border: 1px solid #CCC;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .tableizer-table td {
+    padding: 4px;
+    margin: 3px;
+    border: 1px solid #CCC;
+  }
+  .tableizer-table th {
+    background-color: #104E8B;
+    color: #FFF;
+    font-weight: bold;
+    border: 1px solid #CCC;
+  }
+  table.tableizer-table {
+    font-size: 12px;
+    border: 1px solid #CCC;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+  .tableizer-table td {
+    padding: 4px;
+    margin: 3px;
+    border: 1px solid #CCC;
+  }
+  .tableizer-table th {
+    background-color: #104E8B;
+    padding: 4px;
+    color: #FFF;
+    font-weight: bold;
+  }
+
+  .award-row td {
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .award-row {
+    width: 100%;
+  }
+</style>
