Updated callout info on website

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -193,7 +193,7 @@ dark: true
     </div>
 </section> -->
 
-<section id="location" class="primary-section">
+<!-- <section id="location" class="primary-section">
   <div class="container">
     <h1>Livestream</h1>
     <hr />
@@ -207,7 +207,7 @@ dark: true
     <br />
     <a href="https://www.youtube.com/user/IndianaRobotics/">Checkout the matches of the 2019 Boiler Bot Battle here!</a>
   </div>
-</section>
+</section> -->
 
 
 
