--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
-mission-summary: "See the callout information below!"
+mission-summary: "Sign up on our mailing list to get updates!"
 image: "PFP-Teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
@@ -26,7 +26,10 @@ dark: true
 
 <section id="callout">
 	<div class="container" style="text-align: center;">
-		<img src="img/2020Callout.gif" style="float: none; margin-left: auto; margin-right: auto; width: 75%; height: auto;"/>
+		<h2><u>
+			<a href="https://purdue.ca1.qualtrics.com/jfe/form/SV_8HYmnYKb9pEexnL">Stay updated on our mailing list here!</a>
+		</u></h2>
+		<!-- <img src="img/2020Callout.gif" style="float: none; margin-left: auto; margin-right: auto; width: 75%; height: auto;"/> -->
 	</div>
  </section>
 
@@ -38,7 +41,7 @@ dark: true
 		<br>
 		<br>
 		<p>Purdue FIRST Programs (PFP) is a student organization and class that is based at Purdue University in West Lafayette, Indiana. It is a group composed of approximately 90 students who work together to support the mission and vision of FIRST, primarily through mentoring students in the surrounding Lafayette and West Lafayette communities.</p>
-		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Chanllenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
+		<p>Currently, Purdue FIRST Programs supports almost 30 elementary and middle school FIRST Lego League and FIRST Tech Challenge teams and 4 FIRST Robotic Competition teams. Purdue FIRST Programs also holds a fall qualifying tournament for FIRST Lego League with a FIRST Tech Challenge competition, a spring competition for FIRST Lego League teams, and an offseason competition for FRC teams. In addition, PFP also participates in outreach events throughout the year on campus and in the community.</p>
 		<p>Purdue FIRST Programs inspires in youth and their communities an appreciation of science and technology, while developing life skills, passion, and leadership through mentoring and hands-on activities that provide opportunities for personal growth.</p>
 	</div>
 </section>
