--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -2,11 +2,8 @@
 layout: event-image
 image: arch.jpg
 title: "Purdue First Forums"
-event-date: "October 19th"
-event-year: "2019"
-link: https://purdue.ca1.qualtrics.com/jfe/form/SV_bHoJbU21iStpa9T
-location: "701 W Stadium Ave, West Lafayette, IN 47907"
-location-ntrl: "Neil Armstrong Hall of Engineering"
+event-date: "November 7th"
+event-year: "2020"
 dark: true
 ---
 <section id="about" class="primary-section">
@@ -15,33 +12,60 @@ dark: true
         <hr />
         <br />
         <br />
-        Event hosted by Purdue FIRST Programs in coordination with  Indiana FIRST to teach FRC and FTC teams about technical mentorship aspects of FIRST Programs.
-        Hands-on workshops hosted on campus at Purdue University in Armstrong, Forney, and Physics for team mentors, students, and supporters to participate in.
+        Join us on saturday November 7th for the first ever virtual PurdueFIRST Forums.
+        We'll be live on Twitch from Noon to 5 PM to deliver a variety of talks and sessions on everything robots!
+        Interested in giving a talk? Click <a href="https://forums.firstindianarobotics.org/">here</a> and sign up and register.
+
     <br />
     <br />
     <hr class="medium-hr thin" />
-    <br>
-	Got questions about the event? Send them to <a href="mailto:boilerbotbattle@gmail.com">boilerbotbattle@gmail.com</a>!
-    <br />
-  <img src="img/ForumsMap.png" class="align-left" style="float: left;">
     </div>
 </section>
 
 <section id="schedule" class="primary-section">
     <div class="container">
       <h2>Schedule</h2>
-	<hr />
-        Schedule of workshops is here! Please see the document below for the up-to-date schedule.
+	     <hr />
+        <a href="https://forums.firstindianarobotics.org/">Schedule of workshops is available here!</a>
       	<br />
-	
-	<body style="margin:0px;padding:0px;overflow:scroll">
-	    <iframe src="https://docs.google.com/document/d/e/2PACX-1vSW00gnILvsz52R9IB3w_niXKizvEztyelkfOaFvH0jcRsVYVwPvyg3-UpScCJ4u-ioexGsCip2_aOT/pub?embedded=true" style="overflow:scroll;height:100%;width:100%" height="100%" width="100%"></iframe>
-	</body>
-      
+    </div>
+</section>
+
+<section id="location" class="primary-section">
+    <div class ="container"
+      <h2>Location</h2>
+        <hr />
+        We'll be live throughout the day at these 8 twitch channels. Check out the schedule for the full list of what is hosted when.
+        <br />
+        <ul>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsCarver">Carver</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsCurie">Curie</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsEdison">Edison</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsFrank">Franklin</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsHopper">Hopper</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsNewton">Newton</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsTesla">Tesla</a></li>
+          <li><a href="http://twitch.tv/PurdueVirtualForumsTuring">Turing</a></li>
+        </ul>
+    </div>
 </section>
 
 <style scoped>
    th, td {
      border: 1px solid black;
+  }
+
+  li {
+    a:link {
+      color: black;
+    }
+
+    a:visited {
+      color: magenta;
+    }
+
+    a:hover {
+      color: gold;
+    }
   }
 </style>
