--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -14,7 +14,6 @@ dark: true
         <br />
         Join us on saturday November 7th for the first ever virtual PurdueFIRST Forums.
         We'll be live on Twitch from Noon to 5 PM to deliver a variety of talks and sessions on everything robots!
-        Interested in giving a talk? Click <a href="https://forums.firstindianarobotics.org/">here</a> and sign up and register.
 
     <br />
     <br />
@@ -26,7 +25,7 @@ dark: true
     <div class="container">
       <h2>Schedule</h2>
 	     <hr />
-        <a href="https://forums.firstindianarobotics.org/">Schedule of workshops is available here!</a>
+        <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2020/sessions/grid">Schedule of workshops is available here!</a>
       	<br />
     </div>
 </section>
@@ -55,17 +54,10 @@ dark: true
      border: 1px solid black;
   }
 
-  li {
-    a:link {
-      color: black;
-    }
 
-    a:visited {
-      color: magenta;
-    }
-
-    a:hover {
-      color: gold;
-    }
+  a {
+    text-decoration: underlined;
+    color: blue;
   }
+
 </style>
