--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: big-image
 title: "Purdue FIRST Programs"
 mission-title: "Want to Join Us?"
-mission-summary: "Sign up on our mailing list to get updates!"
+mission-summary: "Look below for ways to join below, like our mailing list to get updates!"
 image: "PFP-Teams.jpg"
 contact: "president@purduefirst.org"
 dark: true
@@ -26,6 +26,9 @@ dark: true
 
 <section id="callout">
 	<div class="container" style="text-align: center;">
+		<h2><u>
+			<a href="https://purdue-edu.zoom.us/j/92408229025">Join us at our callout on 1/21/21 at 6pm EST here!</a> 
+		</u></h2>
 		<h2><u>
 			<a href="https://purdue.ca1.qualtrics.com/jfe/form/SV_8HYmnYKb9pEexnL">Stay updated on our mailing list here!</a>
 		</u></h2>
