Update B3 event details.
Changed event-date, event-year and location.

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -2,12 +2,12 @@
 layout: event-image
 image: B3-2018.jpg
 title: "Boiler Bot Battle"
-event-date: "November 15th-16th"
-event-year: "2019"
-location: "812 3rd Street, West Lafayette, IN 47907"
+event-date: "October 14th-15th"
+event-year: "2022"
+location: "1406 Teal Rd, Lafayette, IN 47905"
 <!-- link: https://forms.gle/NaFjWxBYwgHV3fkz7 -->
-location-ntrl: "Purdue University Armory"
-contact: "boilerbotbattle@gmail.com"
+location-ntrl: "Tippecanoe County Fairgrounds"
+<!-- contact: "boilerbotbattle@gmail.com" -->
 dark: true
 ---
 <section id="about" class="primary-section">
