Remove comment from contact in header form.
Try to fix broken page

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -7,7 +7,7 @@ event-year: "2022"
 location: "1406 Teal Rd, Lafayette, IN 47905"
 <!-- link: https://forms.gle/NaFjWxBYwgHV3fkz7 -->
 location-ntrl: "Tippecanoe County Fairgrounds"
-<!-- contact: "boilerbotbattle@gmail.com" -->
+contact: "boilerbotbattle@gmail.com"
 dark: true
 ---
 <section id="about" class="primary-section">
