Update forms page with 2022 date

--- a/purdue-forums.html
+++ b/purdue-forums.html
@@ -2,8 +2,8 @@
 layout: event-image
 image: arch.jpg
 title: "Purdue First Forums"
-event-date: "November 7th"
-event-year: "2020"
+event-date: "October 1st"
+event-year: "2022"
 dark: true
 ---
 <section id="about" class="primary-section">
@@ -12,8 +12,8 @@ dark: true
         <hr />
         <br />
         <br />
-        Join us on saturday November 7th for the first ever virtual PurdueFIRST Forums.
-        We'll be live on Twitch from Noon to 5 PM to deliver a variety of talks and sessions on everything robots!
+        This year, Purdue FIRST Forums will take place on Saturday, October 1st.  
+	This is a fun, educational experience for teams to hear from seasoned FIRST members and mentors, as well as get excited about the upcoming FTC & FRC season! This year’s overall theme will be ‘Back to Basics’, and will feature presentations that are for FRC, FTC, and are cross-program. 
 
     <br />
     <br />
@@ -25,7 +25,7 @@ dark: true
     <div class="container">
       <h2>Schedule</h2>
 	     <hr />
-        <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2020/sessions/grid">Schedule of workshops is available here!</a>
+        <a href="https://forums.firstindianarobotics.org/purdue-first-forums-2020/sessions/grid">2020 Schedule of workshops</a>
       	<br />
     </div>
 </section>
