B3 page updated with latest information
New description, contact link, schedule and section for past years

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -14,81 +14,30 @@ dark: true
     <div class="container">
         <h1>About</h1>
         <hr />
-        <div class="container">
-          <iframe id="ytplayer" type="text/html" width="640" height="390" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
-        </div>
-        <br />
-        <br />
-        Thank you to the students, mentors, and volunteers for all of your participation in making BoilerBotBattle 2019 an awesome event. Check out our recap, results, and awards. Stay tuned here for any news about upcoming FRC competitions at Purdue!
+	<br>
+        Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play RAPID REACT! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
+	<br>
 
-    <br>
-    <hr class="medium-hr thin" />
-    <br>
-	Got questions about the event? Send them to <a href="mailto:boilerbotbattle@gmail.com">boilerbotbattle@gmail.com</a>!
+	Got questions about the event? Send them to <a href="mailto:sszanti@purdue.edu">sszanti@purdue.edu</a>!
     </div>
 </section>
 
 <section id="teams" class="primary-section">
-<div class="container">
-
-        <h1>2019 Teams</h1>
-        <hr />
-        <br />
-<div class="channel-row">
-  <div class="channel-col">
-  	<table class="tableizer-table">
-  	<thead><tr class="tableizer-firstrow"><th>Team Name</th><th>Team #</th><th>Location of Team</th></tr></thead><tbody>
-  	 <tr><td>Cyber Blue</td><td>234</td><td>Indianapolis, IN</td></tr>
-  	 <tr><td>PantherTech</td><td>292</td><td>Russiaville, IN</td></tr>
-  	 <tr><td>Westside Boiler Invasion</td><td>461</td><td>West Lafayette, IN</td></tr>
-  	 <tr><td>TechHOUNDS</td><td>868</td><td>Carmel, IN</td></tr>
-  	 <tr><td>Pike RoboDevils</td><td>1018</td><td>Indianapolis, IN</td></tr>
-  	 <tr><td>Precision Guessworks</td><td>1646</td><td>Lafayette, IN</td></tr>
-  	 <tr><td>Harrison Boiler Robotics</td><td>1747</td><td>West Lafayette, IN</td></tr>
-  	 <tr><td>Lindblom Electric Eagles</td><td>1781</td><td>Chicago, IL</td></tr>
-  	 <tr><td>Las Pumas</td><td>2197</td><td>New Carlisle, IN</td></tr>
-  	 <tr><td>Gear It Forward</td><td>2338</td><td>Oswego, IL</td></tr>
-  	 <tr><td>ElkLogics</td><td>2867</td><td>Elkhart, IN</td></tr>
-  	 <tr><td>MECHAlosaurs</td><td>3180</td><td>Trafalgar, IN</td></tr>
-  	 <tr><td>Red Pride Robotics</td><td>3487</td><td>Plainfield, IN</td></tr>
-  	 <tr><td>The Quadrangles</td><td>3494</td><td>Bloomington, IN</td></tr>
-  	 <tr><td>PiBotics</td><td>3814</td><td>Erlanger, KY</td></tr>
-  	 <tr><td>CyberTooth</td><td>3940</td><td>Kokomo, IN</td></tr>
-  	 <tr><td>Ctrl-Z</td><td>4096</td><td>Champaign, IL</td></tr>
-  	 <tr><td>Maverick Boiler Robotics</td><td>4272</td><td>Lafayette, IN</td></tr>
-  	 <tr><td>TribeTech</td><td>4485</td><td>Danville, IN</td></tr>
-  	 <tr><td>GalacTech</td><td>4926</td><td>Columbus, IN</td></tr>
-  	 <tr><td>Tiger Dynasty</td><td>5010</td><td>Fishers, IN</td></tr>
-  	 <tr><td>Hawks On The Horizon</td><td>5125</td><td>Chicago, IL</td></tr>
-  	 <tr><td>Area 5188: Classified Robotics</td><td>5188</td><td>Terre Haute, IN</td></tr>
-  	 <tr><td>Career Academy Robotics</td><td>5484</td><td>South Bend</td></tr>
-  	 <tr><td>Wolfbyte</td><td>5822</td><td>Chicago, IL</td></tr>
-  	 <tr><td>SHAM-ROCK-BOTICS</td><td>6956</td><td>Westfield, IN</td></tr>
-  	 <tr><td>Fearsome Gears</td><td>7198</td><td>Monticello, IN</td></tr>
-  	 <tr><td>suPURDUEper Robotics</td><td>7457</td><td>Indianapolis, IN</td></tr>
-  	 <tr><td>The RoboBlazers</td><td>7617</td><td>Carmel, IN</td></tr>
-  	 <tr><td>Thunderbots</td><td>7657</td><td>Evansville, IN</td></tr>
-  	 <tr><td>Hatchet Robotics</td><td>8116</td><td>Washington, IN</td></tr>
-  	 <tr><td>Slicer Tech</td><td>9102</td><td>La Porte, IN</td></tr>
-  	</tbody></table>
-  </div>
-  <div class="channel-col">
-    <img src="img/B32019-Results.png" class="spons-image" style="max-height: 30%; margin-bottom: 0px;"/>
-    <a href="https://www.thebluealliance.com/event/2019inbbb#results">More results at thebluealliance.com</a>
-  </div>
-</div>
-
-
-    </div>
+	<div class="container">
+		<h1>2022 Teams</h1>
+		<hr />
+		To be released.
+	</div>
 </section>
 
 <section id="Sponsors" class="primary-section">
   <div class="container">
     <h1>Event Sponsors</h1>
     <hr />
-    <br />A huge thank you to our 2019 Event Sponsors for helping make B3 possible.
+    <br />A huge thank you to our 2022 Event Sponsors for helping make B3 possible.
     <br />
     <br />
+	<!--
     <div class="container">
       <img src="img/JohnDeere.png" class="spons-image" style="margin-bottom: 5px; max-height: 10em;"/>
       <br />
@@ -116,15 +65,22 @@ dark: true
 
 
     </div>
+	-->
   </div>
 </section>
 
-<!--<section id="schedule" class="primary-section">
+<section id="schedule" class="primary-section">
 <div class="container">
-        <h1>2019 Schedule</h1>
+        <h1>2022 Schedule</h1>
         <hr />
         <br />
-         <div class="center">
+
+	The 14th is just for setup and load-in. We’re also looking into giving Purdue tours to teams on the 14th after they get their pits set up as an additional ‘activity’ for that day.
+	<br>
+	We don’t have a set schedule for the competition day yet, but this past year our opening ceremonies began at 9:30 AM with Quals beginning at 10 AM.
+
+	<!--
+        <div class="center">
         <br />
         <b>Friday November 15th</b>
         <br />
@@ -189,11 +145,11 @@ dark: true
 		-Lego Free Build
 		<br />
 		-DJ
-        </div>
+        </div> -->
     </div>
-</section> -->
+</section>
 
-<!-- <section id="location" class="primary-section">
+<!-- <section id="livestream" class="primary-section">
   <div class="container">
     <h1>Livestream</h1>
     <hr />
@@ -209,19 +165,26 @@ dark: true
   </div>
 </section> -->
 
-
-
-
-
 <section id="location" class="primary-section">
 <div class="container">
   <h1>Location</h1>
   <hr />
   <br />
   <div class="center">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2002.590734024036!2d-86.91866526050549!3d40.428480359435476!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8812e2b3990678b9%3A0x11dcd5ecb4889da9!2sArmory%2C%20812%203rd%20Street%2C%20West%20Lafayette%2C%20IN%2047907!5e0!3m2!1sen!2sus!4v1569080406406!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d978.893267809902!2d-86.88256896738342!3d40.39633519107276!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88131d0c6178c60f%3A0x1b5f05e5f88af09a!2sTippecanoe%20County%20Fairgrounds!5e0!3m2!1sen!2sus!4v1663001541135!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </div>
+</section>
+
+<section id="past" class="primary-section">
+	<div class="container">
+		<h1>Past Years</h1>
+		<hr />
+		<br />
+		<div class="container">
+		  <iframe id="ytplayer" type="text/html" width="800" height="450" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
+		</div>
+	</div>
 </section>
 
 <style type="text/css">
