Added teams list and schedule to B3 page

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -12,19 +12,82 @@ dark: true
 ---
 <section id="about" class="primary-section">
     <div class="container">
-        <h1>About</h1>
-        <hr />
+        <h1>About</h1><hr />
         Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play <b>RAPID REACT</b>! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
 	<br><br>
 	Got questions about the event? Send them to <a href="mailto:sszanti@purdue.edu">sszanti@purdue.edu</a>!
+	<br><br>https://docs.google.com/forms/d/e/1FAIpQLSfy4_S6muBxV6qhGAGkH7eGY6WzeD7ssl0YSWT4HCzWXLZ69w/viewform
+	Want to volunteer at the event? <a href="https://forms.gle/F7ng5jcJgT1iZSdw5">fill out this form</a>.
+    </div>
+</section>
+
+<section id="schedule" class="primary-section">
+    <div class="container">
+        <h1>2022 Schedule</h1><hr />
+	<h3>FRIDAY</h3>
+	<table>
+	  <tr>
+	    <td>5:00 pm</td>
+	    <td>Teams arrive to unload in pits</td>
+	  </tr>
+	  <tr>
+	    <td>8:00 pm</td>
+	    <td>Door close</td>
+	  </tr>
+	</table>
+
+	<h3>SATURDAY</h3>
+	<table>
+	  <tr>
+	    <td>8:00 am</td>
+	    <td>Volunteers arrive</td>
+	  </tr>
+	  <tr>
+	    <td>8:30 am</td>
+	    <td>Doors Open, Teams start loading in</td>
+	  </tr>
+	  <tr>
+	    <td>9:00 -<br>9:30 am</td>
+	    <td>Field open for camera calibration</td>
+	  </tr>
+	  <tr>
+	    <td>9:30 am</td>
+	    <td>Drivers Meeting</td>
+	  </tr>
+	  <tr>
+	    <td>9:45 am</td>
+	    <td>Opening Ceremonies</td>
+	  </tr>
+	  <tr>
+	    <td>10:00 -<br>12:00 pm</td>
+	    <td>Qualifying Matches</td>
+	  </tr>
+	  <tr>
+	    <td>12:00 -<br>1:00 pm</td>
+	    <td>Lunch Break</td>
+	  </tr>
+	  <tr>
+	    <td>1:00 -<br>3:30 pm</td>
+	    <td>Qualifying Matches</td>
+	  </tr>
+	  <tr>
+	    <td>3:30 -<br>4:00 pm</td>
+	    <td>Alliance Selection</td>
+	  </tr>
+	    <td>4:15 -<br>5:45 pm</td>
+	    <td>Semi-Finals, Finals</td>
+	  </tr>
+	    <td>5:45 -<br>6:00 pm</td>
+	    <td>Closing Ceremonies</td>
+	  </tr>
+	</table>
     </div>
 </section>
 
 <section id="teams" class="primary-section">
 	<div class="container">
-		<h1>2022 Teams</h1>
-		<hr />
-		To be released.
+		<h1>2022 Teams</h1><hr />
+		45, 135, 234, 292, 461, 829, 868, 1646, 1720, 1741, 1747, 1781, 2867, 3176, 3940, 4096, 4272, 4485, 4926, 5010, 5402, 5484, 5822, 6721, 6956, 7198, 7457, 7617, 7657, 8742, 9039
 	</div>
 </section>
 
@@ -63,84 +126,6 @@ dark: true
     </div>
 	-->
   </div>
-</section>
-
-<section id="schedule" class="primary-section">
-<div class="container">
-        <h1>2022 Schedule</h1>
-        <hr />
-	The 14th is just for setup and load-in. We’re also looking into giving Purdue tours to teams on the 14th after they get their pits set up as an additional ‘activity’ for that day.
-	<br><br>
-	We don’t have a set schedule for the competition day yet, but this past year our opening ceremonies began at 9:30 AM with Quals beginning at 10 AM.
-
-	<!--
-        <div class="center">
-        <br />
-        <b>Friday November 15th</b>
-        <br />
-        5:00pm-8:00pm Venue open for robot load in and practice rounds (field permitting)
-        <br />
-        6:00pm-10:00pm Team Social
-        <br />
-		<br />
-        <b>Saturday, November 16th</b>
-        <br />
-        7:15am Doors Open
-        <br />
-        7:45am-8:00am	Drivers' Meeting
-        <br />
-        8:00am-8:30am Opening Ceremonies
-        <br />
-        8:30am-12:00pm Qualification Matches
-        <br />
-        <br />
-        12:00pm-1:00pm Lunch
-        <br />
-        1:00pm-2:30pm Qualification Matches
-        <br />
-        2:30pm-3:00pm Alliance Selection
-        <br />
-        3:00pm-5:30pm Elimination Matches
-        <br />
-        6:00pm-6:45pm Awards and Closing Ceremonies
-            <h2>Team Social</h2>
-        <hr class="medium-hr thin" />
-        <br />
-        The team social will take place on Friday, October 26th from 6:00-10:00pm. The social will cost $10* per person attending and will include Coldstone Ice Cream and Pizza.
-        <br />
-		* $10 paid ahead or $12 at the door
-		<br />
-		<br />
-		<br />
-        6:00 Team welcome
-        <br />
-        6:15-7:15 Scavenger Hunt
-		<br />
-        6:15-6:45 The Floor Is Lava
-        <br />
-        6:50-7:30 Ninja Tournament
-        <br />
-        7:30-8:30: Dinner/Free Roam Activities
-        <br />
-        8:30-9:15: Kahoot Quizzes
-		<br />
-		9:15-10:00: Free Roam Activities
-		<br />
-		<br />
-		<br />
-		Free Roam Activities:
-		<br />
-		-Board Games
-		<br />
-		-Paper Airplane Competition
-		<br />
-		-Free Write Large Paper
-		<br />
-		-Lego Free Build
-		<br />
-		-DJ
-        </div> -->
-    </div>
 </section>
 
 <!-- <section id="livestream" class="primary-section">
