--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -23,6 +23,11 @@ dark: true
 
 <section id="schedule" class="primary-section">
     <div class="container">
+	<style>
+		tr > * + * {
+		  padding-right: 4em;
+		}
+	</style>
         <h1>2022 Schedule</h1><hr />
 	<h3>FRIDAY</h3>
 	<table>
@@ -93,8 +98,7 @@ dark: true
 
 <section id="Sponsors" class="primary-section">
   <div class="container">
-    <h1>Event Sponsors</h1>
-    <hr />
+    <h1>Event Sponsors</h1><hr />
     A huge thank you to our 2022 Event Sponsors for helping make B3 possible.
 	<!--
     <div class="container">
@@ -130,8 +134,7 @@ dark: true
 
 <!-- <section id="livestream" class="primary-section">
   <div class="container">
-    <h1>Livestream</h1>
-    <hr />
+    <h1>Livestream</h1><hr />
     <br />
     <div class="center">
       <iframe src="https://player.twitch.tv/?channel=indianafirstlive" frameborder="0" allowfullscreen="true" scrolling="no" height="378" width="620"></iframe>
@@ -146,8 +149,8 @@ dark: true
 
 <section id="location" class="primary-section">
 <div class="container">
-  <h1>Location</h1>
-  <hr />
+  <h1>Map & Location</h1><hr />
+  <img src="img/FairgroundsB3Map.png" style="margin: auto; width:80%;"/>
   <div class="center">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d978.893267809902!2d-86.88256896738342!3d40.39633519107276!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88131d0c6178c60f%3A0x1b5f05e5f88af09a!2sTippecanoe%20County%20Fairgrounds!5e0!3m2!1sen!2sus!4v1663001541135!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
@@ -156,8 +159,7 @@ dark: true
 
 <section id="past" class="primary-section">
 	<div class="container">
-		<h1>Past Years</h1>
-		<hr />
+		<h1>Past Years</h1><hr />
 		<div class="container">
 		  <iframe id="ytplayer" type="text/html" width="800" height="450" src="https://www.youtube.com/embed/YcEoE-SJ8OE" frameborder="0"></iframe>
 		</div>
