B3 page formating corrections

--- a/boilerbotbattle.html
+++ b/boilerbotbattle.html
@@ -16,7 +16,7 @@ dark: true
         Boiler Bot Battle (B3) is an annual off-season event for FRC teams to compete in the previous season’s game. This means it will be another chance for teams to work together and play <b>RAPID REACT</b>! The event allows teams to learn, practice their skills, and get excited about the upcoming season. Additionally, the event is held close to Purdue University, giving teams the opportunity to visit the campus and ask current students questions.
 	<br><br>
 	Got questions about the event? Send them to <a href="mailto:sszanti@purdue.edu">sszanti@purdue.edu</a>!
-	<br><br>https://docs.google.com/forms/d/e/1FAIpQLSfy4_S6muBxV6qhGAGkH7eGY6WzeD7ssl0YSWT4HCzWXLZ69w/viewform
+	<br><br>
 	Want to volunteer at the event? <a href="https://forms.gle/F7ng5jcJgT1iZSdw5">fill out this form</a>.
     </div>
 </section>
@@ -24,9 +24,15 @@ dark: true
 <section id="schedule" class="primary-section">
     <div class="container">
 	<style>
-		tr > * + * {
-		  padding-right: 4em;
-		}
+	    table, th, td {
+	      border: 1px solid black;
+	      border-collapse: collapse;
+	      border-left: none;
+	      border-right: none;
+	    }
+	    td {
+	      padding-right: 1em;
+	    }
 	</style>
         <h1>2022 Schedule</h1><hr />
 	<h3>FRIDAY</h3>
@@ -150,8 +156,8 @@ dark: true
 <section id="location" class="primary-section">
 <div class="container">
   <h1>Map & Location</h1><hr />
-  <img src="img/FairgroundsB3Map.png" style="margin: auto; width:80%;"/>
   <div class="center">
+    <img src="img/FairgroundsB3Map.png" style="height:550px;border:0;float:left;">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d978.893267809902!2d-86.88256896738342!3d40.39633519107276!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88131d0c6178c60f%3A0x1b5f05e5f88af09a!2sTippecanoe%20County%20Fairgrounds!5e0!3m2!1sen!2sus!4v1663001541135!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
   </div>
 </div>
