Cleaned up horizontal line formatting

--- a/mentoring.html
+++ b/mentoring.html
@@ -7,9 +7,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/461.png" alt="461 Logo">
 	<div class="container">
-		<h1>FRC Team 461 </h1>
-		<hr class="medium-hr hr-461"/>
-		<br />
+		<h1>FRC Team 461 </h1><hr class="hr-461"/>
 		<div class="team-logo-caption">
 			<p>FRC Team 461, Westside Boiler Invasion, is from West Lafayette Junior/Senior High School in West Lafayette, Indiana and was founded in 1999. They are passionate about science and technology. By working together to accomplish tasks in such fields as technology and public relations, we excite other students and the community about the values of FIRST.</p>
 			<ul class="team-links">
@@ -23,9 +21,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/1646.png" alt="1646 Logo">
 	<div class="container">
-		<h1>FRC Team 1646 </h1>
-		<hr class="medium-hr hr-1646"/>
-		<br />
+		<h1>FRC Team 1646 </h1><hr class="hr-1646"/>
 		<div class="team-logo-caption">
 			<p>FRC Team 1646, Precision Guessworks, is from Jefferson High School in Lafayette, Indiana and was founded in 2003. For more than a decade, 1646 has been inspiring students and their community.</p>
 			<ul class="team-links">
@@ -38,9 +34,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/1747.png" alt="1747 Logo">
 	<div class="container">
-		<h1>FRC Team 1747 </h1>
-		<hr class="medium-hr hr-1747" />
-		<br />
+		<h1>FRC Team 1747 </h1><hr class="hr-1747" />
 		<div class="team-logo-caption">
 			<p>FRC Team 1747, Harrison Boiler Robotics, is from Harrison High School in West Lafayette, Indiana and was founded in 2005. They are dedicated to spreading the wonders of science and technology throughout their community and they encourage students to become involved in various FIRST programs.</p>
 			<ul class="team-links">
@@ -54,9 +48,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/4272.png" alt="4272 Logo">
 	<div class="container">
-		<h1>FRC Team 4272 </h1>
-		<hr class="medium-hr hr-4272" />
-		<br />
+		<h1>FRC Team 4272 </h1><hr class="hr-4272" />
 		<div class="team-logo-caption">
 			<p>FRC Team 4272, Maverick Boiler Robotics, is from McCutcheon High School in Lafayette, Indiana and was founded in 2012. Students on the team promote their interests with a class offered by their school. <br />
 			</p>
@@ -71,8 +63,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/machines_of_mayhem.png" alt="Machines Of Mayhem Logo">
 	<div class="container">
-		<h1>FTC Team 10133 - Machines of Mayhem</h1>
-		<hr />
+		<h1>FTC Team 10133 - Machines of Mayhem</h1><hr>
 		<div class="team-logo-caption">
 			<p>Machines of Mayhem, FTC 10133, was created in August of 2015 at New Community School, a school in Lafayette, Indiana. They are mentored by the students of another local FIRST Team, FRC 1747, local FRC mentors, and PFP's own mentors.</p>
 			<ul class="team-links">
@@ -84,8 +75,7 @@ dark: true
 <section class="primary-section">
 	<img class="team-logo" src="/img/cc_sparks.png" alt="CC Sparks Logo">
 	<div class="container">
-		<h1>FTC Team 8272 - CC Sparks</h1>
-		<hr />
+		<h1>FTC Team 8272 - CC Sparks</h1><hr>
 		<div class="team-logo-caption">
 			<p>CC Sparks, FTC 8272, is a team based out of Central Catholic High School in Lafayette, Indiana. They were formed in 2013, and Purdue FIRST Programs is excited to support their continued growth.</p>
 			<ul class="team-links">
@@ -97,13 +87,8 @@ dark: true
 </section>
 <section class="primary-section">
 	<div class="container">
-		<h1>FLL Teams</h1>
-		<hr class="medium-hr">
-		<br />
-		<br />
-		<p>Purdue FIRST Programs is proud to sponsor several FLL teams, listed below.</p>
-		<br />
-		<br />
+		<h1>FLL Teams</h1><hr>
+		<p>Purdue FIRST Programs is proud to sponsor several FLL teams, listed below.</p><br>
 		<table class="team-table">
 			<tr>
 				<th>Team Name</th>
